--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
                 </ul>
 
 
-                <button class="landing-page-button" id="button-students">Students Get Started</button>
-                <button class="landing-page-button" id="button-profs">Professors and TAs Get Started</button>
-                <button class="landing-page-button" id="button-view-class">View a Real Class</button>
+                <div class="landing-page-buttons">
+                    <button class="landing-page-button" id="button-students">Students Get Started</button>
+                    <button class="landing-page-button" id="button-profs">Professors and TAs Get Started</button>
+                    <button class="landing-page-button" id="button-view-class">View a Real Class</button>
+                </div>
+               
             </div>
         </div>
 
