--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="landing-page-inner-wrapper">
             <div class="landing-page-video">
-                <iframe src="https://www.youtube.com/embed/2jLSiN8E18w" title="YouTube video player" frameborder="0"
+                <iframe src="https://www.youtube.com/embed/2jLSiN8E18w" title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
             </div>
@@ -272,7 +272,7 @@
     <footer>
         <a href="https://www.facebook.com/Piazzza/"><img src="./pics/fblogo.png" alt="fblogo" id="fblogo"></a>
         <a href="https://twitter.com/piazza"><img src="./pics/twitterlogo.png" alt="twitterlogo" id="twitterlogo"></a>
-        <p>Copyright &copy 2021</p>
+        <p>Copyright &copy; 2021</p>
         <p>Piazza Technologies</p>
         <p>All Rights Reserved</p>
     </footer>
